syntax = "proto3";

package course;

service CourseService {
    rpc CreateCourse(CreateCourseRequest) returns (Course) {}
    rpc FindAllCourses(FindAllCourseRequest) returns (Courses) {}
    rpc FindOneCourse(FindOneCourseRequest) returns (Course) {}
    rpc UpdateCourse(UpdateCourseRequest) returns (Course) {}
    rpc RemoveCourse(FindOneCourseRequest) returns (Course) {}
    rpc QueryCourse(stream PaginationRequest) returns (stream Course) {}
    rpc SetCourseFile (SetCourseFileRequest) returns (SetCourseFileResponse) {}
    rpc RemoveFilesFromCourse (SetCourseFileRequest) returns (SetCourseFileResponse) {}
}

message CreateCourseRequest {
    string title = 1;
    string description = 2;
}

message Course {
    int32 id = 1;
    string title = 2;
    string description = 3;
}

message Empty {}

message Courses {
    repeated Course courses = 1;
}

message FindAllCourseRequest {
    int32 page = 1;
    int32 skip = 2;
}

message FindOneCourseRequest {
    int32 id = 1;
}

message UpdateCourseRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
}

message PaginationRequest {
    int32 page = 1;
    int32 skip = 2;
}

message SetCourseFileRequest {
    int32 courseId = 1;
    repeated int32 fileIds = 2;
}

message SetCourseFileResponse {
    Course course = 1;
    repeated File files = 2;
}

message File {
    int32 id = 1;
    string fileName = 2;
    string extension = 3;
    int32 fileSize = 4;
    string filePath = 5;
}









